2004-11-20  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/intr.c: Make the ISR call the DSR to make sure this works
	correctly.

2004-08-22  Gary Thomas  <gary@mlbassoc.com>

	* doc/porting.sgml: Replace [very misleading dated] comments
	about CygMon and platforms which use/need GDB stubs.

2004-08-12  Jani Monoses <jani@iv.ro>

	* include/hal_if.h: Make monitor locking work with CYGPKG_LWIP.

2004-05-19  John Newlin <jnewlin@stretchinc.com>

	* src/hal_stub.c:
	(cyg_hal_gdb_interrupt) 
	(cyg_hal_gdb_remove_break): Changed both to use
	_read_mem_safe/__write_mem_safe for inserting a breakpoint, and
	restoring the original instruction.
	The Xtensa architecture (and others maybe?) can have unaligned
	instructions, which caused unaligned load/store exception.
	
2004-04-22  Jani Monoses <jani@iv.ro>

	 * cdl/hal.cdl :
	 Invoke tail with stricter syntax that works in latest coreutils. 

2004-02-23  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/debugging.cdl (CYGDBG_HAL_DEBUG_GDB_INCLUDE_STUBS): Included
	stubs should always mean saving full context both on interrupts
	and context swaps, so make it explicit.

2004-01-05  Gary Thomas  <gary@mlbassoc.com>

	* include/hal_if.h: Minor fixup - new 'fconfig' functions broke 
	existing uses of CYGACC_CALL_IF_FLASH_CFG_OP.  Added a new macro
	CYGACC_CALL_IF_FLASH_CFG_OP2 which handles new API and a wrapper
	to handle the old way (backwards compatability).

2003-12-21  Gary Thomas  <gary@mlbassoc.com>

	* src/hal_if.c (flash_config_op): 
	* include/hal_if.h: New expanded functions for RedBoot 'fconfig'
	database.

2003-09-04  Patrick Doyle  <wpd@dtccom.com>

	* include/hal_if.h: 
	* src/hal_if.c (flash_fis_op): Added support for the rest of the
	FIS operations.

2003-08-06  Bob Koninckx <bob.koninckx@mech.kuleuven.ac.be>

	* src/drv_api.c: Added definition of cyg_interrupt_post_dsr() for
	use in those HALs that need it.

	* include/hal_arbiter.h (hal_call_isr): Removed ifdef on